tests/snapshots/output/diagnostics/erroneous_end_tag_multiline.snap
---
source: tests/snapshots/diagnostics.rs
description: "<div>\n    <foo>\n        Some text\n    </bar>\n</div>\n"
---
error: unexpected closing tag
 --> diagnostics/erroneous_end_tag_multiline.html:4:7
  |
2 |     <foo>
  |      --- expected due to this open tag name
...
4 |     </bar>
  |       ^^^ expected `foo`, found `bar`
  |
help: consider using `foo`
  |
4 ~     </foo>
